Always show scrollbar to prevent wrong positioning

--- a/src/style.scss
+++ b/src/style.scss
@@ -14,7 +14,7 @@ $boostrapAssetDir: '~phovea_ui/src/assets';
 body, html {
   font-family: Yantramanav, 'Helvetica Neue', Helvetica, sans-serif !important;
   font-weight: 400 !important;
-  height: auto !important;
+  //height: auto !important;
 }
 
 h1,h2,h3,h4,h5,h6 {
